@@ -38,22 +38,22 @@ module ActionController #:nodoc:
       extend ActiveSupport::Concern
 
       included do
-        @@page_cache_directory = defined?(Rails.public_path) ? Rails.public_path : ""
         ##
         # :singleton-method:
         # The cache directory should be the document root for the web server and is set using <tt>Base.page_cache_directory = "/document/root"</tt>.
         # For Rails, this directory has already been set to Rails.public_path (which is usually set to <tt>RAILS_ROOT + "/public"</tt>). Changing
         # this setting can be useful to avoid naming conflicts with files in <tt>public/</tt>, but doing so will likely require configuring your
         # web server to look in the new location for cached files.
+        @@page_cache_directory = ''
         cattr_accessor :page_cache_directory
 
-        @@page_cache_extension = '.html'
         ##
         # :singleton-method:
         # Most Rails requests do not have an extension, such as <tt>/weblog/new</tt>. In these cases, the page caching mechanism will add one in
         # order to make it easy for the cached files to be picked up properly by the web server. By default, this cache extension is <tt>.html</tt>.
         # If you want something else, like <tt>.php</tt> or <tt>.shtml</tt>, just set Base.page_cache_extension. In cases where a request already has an
         # extension, such as <tt>.xml</tt> or <tt>.rss</tt>, page caching will not add an extension. This allows it to work well with RESTful apps.
+        @@page_cache_extension = '.html'
         cattr_accessor :page_cache_extension
       end
 
