@@ -125,5 +125,16 @@ module RailtiesTest
       require "#{app_path}/config/environment"
       assert $ran_block
     end
+    
+    test "we can change our environment if we want to" do
+      begin
+        original_env = Rails.env
+        Rails.env = 'foo'
+        assert_equal('foo', Rails.env)
+      ensure
+        Rails.env = original_env
+        assert_equal(original_env, Rails.env)
+      end
+    end
   end
 end
